wier/force-app/main/default/objects/CostSheet__c/CostSheet__c.object-meta.xml
<CustomObject>
    <label>Cost Sheet</label>
    <nameField>
        <displayFormat>CS-{000000000}</displayFormat>
        <label>CostSheet ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Sheet</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>