wier/force-app/main/default/objects/CostSheet__c/fields/Comment_if_any__c.field-meta.xml
<CustomField>
    <fullName>Comment_if_any__c</fullName>
    <label>Comments (if any)</label>
    <type>TextArea</type>
</CustomField>