wier/force-app/main/default/objects/CostSheet__c/fields/Cost_sales_ratio__c.field-meta.xml
<CustomField>
    <fullName>Cost_sales_ratio__c</fullName>
    <formula>Total_Cost_TC__c  /  Sales_value_for_Quotation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost sales ratio (TC/SVQ)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>