wier/force-app/main/default/objects/CostSheet__c/fields/Cost_Sheet_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cost_Sheet_Amount__c</fullName>
    <label>Sales Value as per pricing policy (SVP)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>