wier/force-app/main/default/objects/CostSheet__c/fields/Cost_Sheet_Contents__c.field-meta.xml
<CustomField>
    <fullName>Cost_Sheet_Contents__c</fullName>
    <label>Cost Sheet Contents</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>