wier/force-app/main/default/objects/CostSheet__c/fields/Cost_Sheet_Preparation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cost_Sheet_Preparation_Date__c</fullName>
    <label>Cost Sheet Preparation Date</label>
    <type>Date</type>
</CustomField>