wier/force-app/main/default/objects/CostSheet__c/fields/Cost_Sheet_Version__c.field-meta.xml
<CustomField>
    <fullName>Cost_Sheet_Version__c</fullName>
    <label>Cost Sheet Version</label>
    <length>25</length>
    <type>Text</type>
</CustomField>