wier/force-app/main/default/objects/CostSheet__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>Discount_amount_if_any__c / Cost_Sheet_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount in cost sheet (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>