wier/force-app/main/default/objects/CostSheet__c/fields/Discount_amount_if_any__c.field-meta.xml
<CustomField>
    <fullName>Discount_amount_if_any__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Discount/Upselling amount (if any)</description>
    <label>Discount amount (if any)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>