wier/force-app/main/default/objects/CostSheet__c/fields/Discount_Upselling__c.field-meta.xml
<CustomField>
    <fullName>Discount_Upselling__c</fullName>
    <formula>IF(Discount_amount_if_any__c &lt;=1,( (Upsell_amount_if_any__c / Cost_Sheet_Amount__c )*100),((Discount_amount_if_any__c / Cost_Sheet_Amount__c)*100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount / Upselling (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>