wier/force-app/main/default/objects/CostSheet__c/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <formula>( Sales_value_for_Quotation__c  -  Total_Cost_TC__c  )  /  Sales_value_for_Quotation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin (SVQ-TC)/SVQ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>