wier/force-app/main/default/objects/CostSheet__c/fields/Labour_Cost__c.field-meta.xml
<CustomField>
    <fullName>Labour_Cost__c</fullName>
    <label>Labour Cost (L)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>