wier/force-app/main/default/objects/CostSheet__c/fields/Material_Cost__c.field-meta.xml
<CustomField>
    <fullName>Material_Cost__c</fullName>
    <label>Material Cost (M)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>