wier/force-app/main/default/objects/CostSheet__c/fields/Other_Cost__c.field-meta.xml
<CustomField>
    <fullName>Other_Cost__c</fullName>
    <label>Other Costs (O)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>