wier/force-app/main/default/objects/CostSheet__c/fields/Sales_value_for_Quotation__c.field-meta.xml
<CustomField>
    <fullName>Sales_value_for_Quotation__c</fullName>
    <formula>Cost_Sheet_Amount__c +  Upsell_amount_if_any__c -   Discount_amount_if_any__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SalesValue in Quote(SVQ)=SVP-Disc+Upsell</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>