wier/force-app/main/default/objects/CostSheet__c/fields/Total_Cost_TC__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_TC__c</fullName>
    <formula>Labour_Cost__c  +  Material_Cost__c  +  Other_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost (TC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>