wier/force-app/main/default/objects/CostSheet__c/fields/Upsell__c.field-meta.xml
<CustomField>
    <fullName>Upsell__c</fullName>
    <formula>Upsell_amount_if_any__c/ Cost_Sheet_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upsell in cost sheet(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>