wier/force-app/main/default/objects/CostSheet__c/fields/Upsell_amount_if_any__c.field-meta.xml
<CustomField>
    <fullName>Upsell_amount_if_any__c</fullName>
    <label>Upsell amount (if any)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>