wier/force-app/main/default/objects/CostSheet__c/validationRules/Cost_Sheet_Amount_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Cost_Sheet_Amount_validation</fullName>
    <active>true</active>
    <description>Cost_Sheet_Amount_validation</description>
    <errorConditionFormula>Cost_Sheet_Amount__c  &lt; 0</errorConditionFormula>
    <errorMessage>Cost Sheet Amount must be greater than or equal to zero.</errorMessage>
</ValidationRule>