wier/force-app/main/default/objects/CostSheet__c/validationRules/Default_Currency.validationRule-meta.xml
<ValidationRule>
    <fullName>Default_Currency</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(COpportunity__r.CurrencyIsoCode)  &lt;&gt; TEXT(CurrencyIsoCode)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Currency selection does not match with the currency selected on opportunity page.</errorMessage>
</ValidationRule>