wier/force-app/main/default/objects/CostSheet__c/validationRules/Discount_amount_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_amount_validation</fullName>
    <active>true</active>
    <description>Discount_amount_validation</description>
    <errorConditionFormula>Discount_amount_if_any__c &lt; 0</errorConditionFormula>
    <errorMessage>Discount amount must be greater than or equal to zero.</errorMessage>
</ValidationRule>