wier/force-app/main/default/objects/CostSheet__c/validationRules/Labour_Cost_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Labour_Cost_Validation</fullName>
    <active>true</active>
    <description>Lab our Cost Validation</description>
    <errorConditionFormula>Labour_Cost__c &lt; 0</errorConditionFormula>
    <errorMessage>Labour cost must be greater than or equal to zero.</errorMessage>
</ValidationRule>