wier/force-app/main/default/objects/CostSheet__c/validationRules/Material_Cost_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Material_Cost_validation</fullName>
    <active>true</active>
    <description>Material_Cost validation</description>
    <errorConditionFormula>Material_Cost__c &lt; 0</errorConditionFormula>
    <errorMessage>Material cost must be greater than or equal to zero.</errorMessage>
</ValidationRule>