wier/force-app/main/default/objects/CostSheet__c/validationRules/Other_cost_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_cost_validation</fullName>
    <active>true</active>
    <description>Other_cost_validation</description>
    <errorConditionFormula>Other_Cost__c &lt; 0</errorConditionFormula>
    <errorMessage>Other cost must be greater than or equal to zero.</errorMessage>
</ValidationRule>