wier/force-app/main/default/objects/CostSheet__c/validationRules/Upsell_amount_Discount_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Upsell_amount_Discount_amount</fullName>
    <active>true</active>
    <description>Upsell_amount_(if_any)_Discount_amount_(</description>
    <errorConditionFormula>OR(AND(ISBLANK( Upsell_amount_if_any__c ), 
       ISBLANK( Discount_amount_if_any__c )
   ) ,
   AND(!ISBLANK( Upsell_amount_if_any__c ), 
       !ISBLANK( Discount_amount_if_any__c )))</errorConditionFormula>
    <errorMessage>Please provide either Discount Amount or Upsell Amount but not both.</errorMessage>
</ValidationRule>