wier/force-app/main/default/objects/CostSheet__c/validationRules/Upsell_amount_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Upsell_amount_validation</fullName>
    <active>true</active>
    <description>Upsell_amount_validation</description>
    <errorConditionFormula>Upsell_amount_if_any__c &lt; 0</errorConditionFormula>
    <errorMessage>Upsell_amount must be greater than or equal to zero.</errorMessage>
</ValidationRule>