wier/force-app/main/default/objects/CostSheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>COpportunity__c</columns>
    <columns>Customer__c</columns>
    <columns>Opportunity_Description__c</columns>
    <columns>Sales_value_for_Quotation__c</columns>
    <columns>Gross_Margin__c</columns>
    <columns>Cost_sales_ratio__c</columns>
    <columns>Upsell_opportunity__c</columns>
    <columns>Upsell__c</columns>
    <columns>Discount__c</columns>
    <columns>Comment_if_any__c</columns>
    <columns>Cost_Sheet_Version__c</columns>
    <columns>Cost_Sheet_Preparation_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>FD</role>
        <role>Financial_Controller</role>
        <role>General_Manager</role>
        <role>Head_of_Sales</role>
        <role>Managing_Director</role>
    </sharedTo>
</ListView>